--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -6,8 +6,9 @@
     -fx-background-color: #4A4C52;
     -fx-text-fill: #FFFFFF;
     -fx-font-family: "Arial";
-    -fx-font-size: 14px;
+    -fx-font-size: 16px;
     -fx-background-radius: 20;
+    -fx-prompt-text-fill: #9B9B9B;
 }
 
 .button {
@@ -25,13 +26,18 @@
     -fx-background-color: #004080;
 }
 
-.scroll-pane,
+.scroll-pane {
+    -fx-background: #2E2F34;
+    -fx-background-color: transparent;
+}
+
 .scroll-pane .viewport {
     -fx-background-color: transparent;
 }
 
 .scroll-bar:vertical {
     -fx-background-color: #2E2F34;
+    -fx-pref-width: 10;
 }
 
 .scroll-bar:vertical .thumb {
